tests/ui/using-for/imports/imported_non_global_operator_definition.stderr
error: operators can only be defined in a global `using for` directive
   ╭▸ ROOT/tests/ui/using-for/imports/auxiliary/defined_non_global_operator.sol:LL:CC
   │
LL │ using {add as +, neg as -} for DefinedInt;
   ╰╴       ━━━

error: operators can only be defined in a global `using for` directive
   ╭▸ ROOT/tests/ui/using-for/imports/auxiliary/defined_non_global_operator.sol:LL:CC
   │
LL │ using {add as +, neg as -} for DefinedInt;
   ╰╴                 ━━━

error: cannot apply builtin operator `+` to `DefinedInt` and `DefinedInt`
   ╭▸ ROOT/tests/ui/using-for/imports/imported_non_global_operator_definition.sol:LL:CC
   │
LL │         return a + b;
   │                ┬ ━ ─ DefinedInt
   │                │
   ╰╴               DefinedInt

error: cannot apply unary operator `-` to `DefinedInt`
   ╭▸ ROOT/tests/ui/using-for/imports/imported_non_global_operator_definition.sol:LL:CC
   │
LL │         return -a;
   ╰╴               ━━

error: aborting due to 4 previous errors

